Fixed Layout Break on smaller Scrreens

--- a/public/sound-board/style.css
+++ b/public/sound-board/style.css
@@ -11,15 +11,16 @@
 body {
   width: 100vw;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(128, 71, 182);
 }
 
 .container {
   width: 100vw;
-  height: 100vh;
-  background-color: rgb(128, 71, 182);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: fit-content;
+  text-align: center;
 }
 
 .sound {
